# De-tai-Cong-Nghe-Phan-Mem

./: README.md  product-backlog.md
03-design/UI-design/: ui-description.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/controllers/: AccountController  BookingController.hpp  CinemaController.hpp  ComboController.hpp  MovieController.hpp  NewsController.hpp  PromotionController.hpp
backend/src/database/: Database.hpp
backend/src/models/: AccountModel  BookingModel.hpp  CinemaModel.hpp  ComboModel.hpp  MovieModel.hpp  NewsModel.hpp  PromotionModel.hpp
backend/src/utils/: AuthGuard.hpp  JsonArrayUtil.hpp  SecurityUtil.hpp
backend/src/websocket/: WebSocketManager.hpp
database-sql/: SQLQuery1.sql  caulenhxemcautruccacbang.sql  fix_cinemahalls.sql
docs/: UX_PROTOTYPE  ai-log  persona.md  scenario-epic.md
docs/01-requirement/: markdown.md
docs/01-requirement/feature/: payment-booking  product-features..md
docs/02-persona/: CUSTOMER_PERSONA.md  ai-log.md  user-journey-khachhang
docs/03-design/: Sitemap-dieuhuong.md  Sitemap.md  home-movielist.md
docs/03-design/UI-design/: PAYMENT_UI_DESIGN  ui-description.md
docs/03-design/architecture/: System-architecture  architecture-description.md  erd.md
docs/03-design/wireframe/: Booking-History.md  Booking-Success.md  Movie_detail.md  Payment.md  hoan-thien-wireframe  seat-selection.md
docs/04-vision/: product-vision  user-story  user-story.md
docs/05-Payment_UI_design/docs/: PAYMENT_FLOW_FINAL.md
docs/05-project-management/: ai-log.md
docs/05-project-management/ai-log-week5/: payment
docs/tuan4/: product vision  user-story.md
features/show-time selection/src/components/: showtimesSelection.tsx
frontend/: HUONG_DAN_CHAY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/components/booking/: Eticket  PaymentModal.tsx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: AuthContext.tsx  BookingContext.tsx  MovieContext.tsx  UIContext.tsx
frontend/src/data/: seedData.ts
frontend/src/hooks/: useAsyncData.ts  useWebSocket.ts
frontend/src/pages/: Admin.tsx  Auth.tsx  Cinemas.tsx  Profile.tsx  Promotions.tsx  Staff.tsx
frontend/src/services/: api.ts  useWebSocket.ts
frontend/src/types/: auth.ts  booking.ts  content.ts  index.ts  movie.ts
frontend/src/utils/: helpers.ts
sever/routes/: showtimes.ts
(+10 files in other folders)
